2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Delete abstraction: now

	* ci.c (getcurdate): Use ‘BE (now)’ directly.
	* rcsedit.c (setmtime): Likewise.
	* rcstime.c (str2date): Likewise.
	* rcsutil.c (gnurcs_init): Init ‘BE (now)’.
	(now): Delete func.
	* base.h (now): Delete func decl.

2010-05-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Factor constant string "revision number".

	* b-anchor.c (ks_revno): New var.
	* b-grok.c (struct grok): Add member ‘bor_no’.
	(ks_revision_number): Delete var.
	(maybe_read_num, must_read_num, MUST_REVNO): Use ‘ks_revno’.
	(must_colon_revno): Use ‘g->bor_no’.
	(full): Init ‘g->bor_no’.
	* base.h (ks_revno): New var decl.
	* ci.c (main): Use ‘ks_revno’.
	* co.c (main): Likewise.
	* rcs.c (getmessage): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcskeep.c (keeprev): Likewise.
	* rcsmerge.c (main): Likewise.
	* rcsrev.c (genbranch, genrevs, fully_numeric): Likewise.
	* yarrrr.c [TEST_REV] (yarrrr): Likewise.

2010-05-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make b-grok.c macro ‘BUMMER’ variadic.

	* b-grok.c (ignoble): Don't accept args ‘blurb’, ‘precisely’;
	don't do initial ‘accf’.
	(BUMMER): Make macro variadic; call ‘accf’ here.
	(eof_too_soon): Update call to ‘BUMMER’.
	(full): Use ‘BUMMER’ more.

2010-05-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use local variables more.

	* b-complain.c (vcomplain): Use local variables more; reduce
	access via ‘PROGRAM’, ‘BE’, ‘MANI’, ‘PREV’, ‘REPO’, ‘GROK’, ‘FLOW’.
	* b-fb.c (oflush): Likewise.
	* b-feph.c (makedirtemp, keepdirtemp): Likewise.
	* b-kwxout.c (keyreplace): Likewise.
	* ci.c (addelta, getcurdate, main): Likewise.
	* co.c (cleanup, rmworkfile, main): Likewise.
	* merger.c (merge): Likewise.
	* rcs.c (dolocks, buildeltatext, main): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcsedit.c (enterstring, rcswriteopen, checkaccesslist)
	(dorewrite, donerewrite, ORCSerror): Likewise.